# Study_load_DJ

./: .gitignore  README.md  manage.py  pyproject.toml
Study_load_DJ/: asgi.py  settings.py  urls.py  wsgi.py
api/distribution/: urls.py
api/distribution/serializers/: distribution.py
api/distribution/viewsets/: distribution.py
api/load/: urls.py
api/load/serializers/: discipline.py  group.py  load.py  loadinfo.py  ondate.py
api/load/viewsets/: load.py
api/notice/serializers/: notice.py
api/notice/viewsets/: notice.py
api/users/: urls.py
api/users/serializers/: title.py  user.py
api/users/viewsets/: user.py
distribution/: admin.py  models.py  urls.py
load/: admin.py  models.py  urls.py  views.py
load/templates/load/: load_home.html
notice/: admin.py  bot.py  models.py  urls.py  views.py
notice/templates/notice/: create_notice.html  create_ok.html  notice.html  notices_view.html  update_notice.html  update_ok.html  user_notices.html  your_notices.html
static/css/: menu.css
templates/: about.html  base.html  home.html  menu.html
templates/registration/: login.html  register.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/templates/user/: profile.html  profile_ok.html  profile_update.html  profile_view.html  teacher.html  teachers.html  titles_create.html  titles_history.html  titles_update.html  update_ok.html  users.html
