[tool.poetry]
name = "study-load-dj"
version = "0.1.0"
description = ""
authors = ["PI-Klimkovich <pol-ik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"
pillow = "^10.2.0"
telegram-send = "^0.37"
requests = "^2.31.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
